--- a/src/app/features/mortgage/pages/mortgage/mortgage.component.html
+++ b/src/app/features/mortgage/pages/mortgage/mortgage.component.html
@@ -20,7 +20,7 @@
               mat-list-icon
               matTooltip="Add mortage details"
               style="cursor: copy; color: coral;"
-              (click)="onAdd(mortgage.mortgageId)"
+              (click)="onAdd(mortgage.mortgageId,id)"
               >add</mat-icon
             >
             <!--<div>
