feature added: interest module, breadcrumb

--- a/src/app/features/customer/pages/customer/customer.component.html
+++ b/src/app/features/customer/pages/customer/customer.component.html
@@ -1,6 +1,18 @@
 <div class="content-wrapper">
+<!-- breadcrumg -->
   <div fxLayout fxLayout.lt-md="column wrap" fxLayoutAlign="center center" fxLayoutGap.gt-sm="250px"
        fxLayoutGap.lt.md="20px">
+       <!-- breadcrumb -->
+      <!--  <div class="col-md-12">
+        <nav aria-label="breadcrumb">
+          <ol class="breadcrumb pl-0">
+            <li class="breadcrumb-item"><a href="#"><i class="material-icons">home</i> Home</a></li>
+            <li class="breadcrumb-item"><a href="#">Basic UI Elements</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Breadcrumbs</li>
+          </ol>
+        </nav>
+      </div> -->
+      <ganapati-breadcrumb></ganapati-breadcrumb>
     <!-- search  -->
 
     <div>
