--- a/src/app/features/interest/shared/interest-form/interest-form.component.scss
+++ b/src/app/features/interest/shared/interest-form/interest-form.component.scss
@@ -1,7 +1,6 @@
-.mortgagedetail-card{
-  margin-left: 350px;
+#interestForm-card{
+  margin-left: 300px;
   margin-right: 350px;
   height: 350px;
   width: 550px;
 }
-
