--- a/src/app/shared/components/action-buttons/action-buttons.component.html
+++ b/src/app/shared/components/action-buttons/action-buttons.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex align-items-center row">
+<div class="d-flex align-items-center">
 
   <button mat-icon-button	 (click)="onAdd()"  *ngIf="enableAdd">
     <mat-icon color="Secondary">add</mat-icon>
