--- a/src/app/features/mortgage-details/shared/mortgage-detail-form/mortgage-detail-form.component.html
+++ b/src/app/features/mortgage-details/shared/mortgage-detail-form/mortgage-detail-form.component.html
@@ -1,13 +1,23 @@
+<!-- mortgage detail form page -->
 <div class="content-wrapper">
+  <!-- breadcrumb -->
+  <ganapati-breadcrumb></ganapati-breadcrumb>
   <section fxLayout="row wrap" fxLayoutAlign="center center">
     <mat-card
       fxFlex="500px"
       fxFlex.xs="100%"
       class="mortgagedetail-form-card mt-4"
     >
-      <mat-card-title align="center"
-        >Add mortgagedetails for mortgage_id: {{ mortgageId }}</mat-card-title
-      >
+      <mat-card-title align="center">Add mortgage Details </mat-card-title>
+      <mat-card-subtitle *ngFor="let customer of customers" align="center">
+        <strong align="center"
+          >Customer:
+          <u style="color: rgb(65, 65, 156);"
+            >{{ customer.fname | titlecase }}
+            {{ customer.lname | titlecase }}</u
+          >
+        </strong>
+      </mat-card-subtitle>
 
       <mat-divider></mat-divider>
       <form
@@ -21,7 +31,7 @@
         <!-- amount -->
         <mat-card-content>
           <div class="row">
-            <div class="col-md-6 col-sm-6 mx-auto mt-4 mb-4">
+            <div class="col-md-6 col-sm-6 mx-auto mt-4 ">
               <mat-form-field class="example-full-width">
                 <input
                   matInput
@@ -56,7 +66,6 @@
             <div class="col-md-6 col-sm-6 mx-auto">
               <mat-form-field class="example-full-width">
                 <input
-
                   matInput
                   type="number"
                   placeholder="Rate of interest"
@@ -91,6 +100,9 @@
             </div>
           </div>
         </mat-card-content>
+        <mat-divider></mat-divider>
+
+        <!-- save/cancel  -->
         <div class="row">
           <div class="col-md-9 col-sm-6">
             <mat-card-actions align="center">
