--- a/src/app/features/mortgage/pages/mortgage/mortgage.component.html
+++ b/src/app/features/mortgage/pages/mortgage/mortgage.component.html
@@ -1,29 +1,36 @@
 <div class="content-wrapper">
-  <div id="mortgage-card">
-    <mat-card class="mortgagedetail-card mt-4 mb-4">
-      <mat-card-header>
-        <mat-card-title>Mortgages information: </mat-card-title>
-        <mat-card-subtitle>
-          CustomerId : {{ id }} mortgage details.
-        </mat-card-subtitle>
-      </mat-card-header>
-      <!--  <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">-->
-      <mat-card-content>
-        <mat-list>
-          <h3 mat-subheader>Details:</h3>
-          <mat-list-item *ngFor="let mortgage of mortgages; index as i">
-            <!--  <button mat-mini-fab disabled aria-label="Example icon button with a home icon">
-              <mat-icon class="m-auto">add</mat-icon>
-            </button> -->
-            {{ i + 1 }}.
-            <mat-icon
-              mat-list-icon
-              matTooltip="Add mortage details"
-              style="cursor: copy; color: coral;"
-              (click)="onAdd(mortgage.mortgageId,id)"
-              >add</mat-icon
+  <!-- breadcrumb -->
+  <ganapati-breadcrumb></ganapati-breadcrumb>
+  <section fxLayout="row wrap" fxLayoutAlign="center center">
+    <div id="mortgage-card">
+      <mat-card
+        fxFlex="500px"
+        fxFlex.xs="100%"
+        class="mortgagedetail-card mt-4 mb-4"
+      >
+          <mat-card-title align='center'>Mortgages information: </mat-card-title>
+          <mat-card-subtitle *ngFor="let customer of customers" align="center">
+            <strong class="mt-2"
+              >Customer: <u style="color: rgb(65, 65, 156);">{{ customer.fname | titlecase }}
+              {{ customer.lname | titlecase }}</u> mortgage list.</strong
             >
-            <!--<div>
+          </mat-card-subtitle>
+          <mat-divider></mat-divider>
+
+        <!--  <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">-->
+        <mat-card-content>
+          <mat-list>
+            <h3 mat-subheader><u>Details:</u></h3>
+            <mat-list-item *ngFor="let mortgage of mortgages; index as i">
+              <h4>
+                <ganapati-action-buttons
+                  (add)="onAdd(mortgage.mortgageId, id)"
+                  (edit)="onEdit()"
+                  (delete)="onDelete()"
+                ></ganapati-action-buttons>
+              </h4>
+
+              <!--<div>
           <a
             [routerLink]="['/createmortgagedetail']"
             mat-stroked-button
@@ -32,32 +39,31 @@
           >Add Mortgage Detail: <mat-icon align="center">add</mat-icon></a
           >
         </div>    -->
-            <h4
-              mat-line
-              style="cursor: pointer;"
-              onmouseover="this.style.color ='red'"
-              onMouseOut="this.style.color='black'"
-              matTooltip="Show more mortgage detail information."
-              (click)="showDetails(mortgage.mortgageId,id)"
+              <h4
+                mat-line
+                style="cursor: pointer;"
+                onmouseover="this.style.color ='red'"
+                onMouseOut="this.style.color='black'"
+                matTooltip="Show more mortgage detail information."
+                (click)="showDetails(mortgage.mortgageId, id)"
+              >
+                Mortgage id: {{ mortgage.fakeMortId }}
+              </h4>
+              <h4 mat-line>Amount: {{ mortgage.amount }}</h4>
+              <h4 mat-line>Date (Nepali): {{ mortgage.nepDate | date }}</h4>
+              <mat-divider></mat-divider>
+            </mat-list-item>
+            <!-- <mat-divider></mat-divider> -->
+          </mat-list>
+        </mat-card-content>
+        <mat-card-actions>
+          <button mat-icon-button color="basic" (click)="goToList()">
+            <mat-icon aria-label="arrow back" color="primary"
+              >arrow_back</mat-icon
             >
-              Mortgage id: {{ mortgage.fakeMortId }}
-            </h4>
-            <h4 mat-line>Amount: {{ mortgage.amount }}</h4>
-            <h4 mat-line>
-              Nepali Date of Transaction: {{ mortgage.nepDate | date }}
-            </h4>
-            <mat-divider></mat-divider>
-          </mat-list-item>
-          <!-- <mat-divider></mat-divider> -->
-        </mat-list>
-      </mat-card-content>
-      <mat-card-actions>
-        <button mat-button (click)="goToList()">
-          <mat-icon aria-label="arrow back" color="primary"
-            >arrow_back</mat-icon
-          >
-        </button>
-      </mat-card-actions>
-    </mat-card>
-  </div>
+          </button>
+        </mat-card-actions>
+      </mat-card>
+    </div>
+  </section>
 </div>
